# multiomics

./: .gitignore  Cargo.toml  Dockerfile  README.md  Singularity.def  meta.yaml  multiomics_wasm_bg.wasm.d.ts  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
atacseq_core/: Cargo.toml
atacseq_core/src/: accum.rs  lib.rs  narrowpeak.rs  peaks.rs  types.rs
biomics_core/: Cargo.toml
biomics_core/benches/: hll_vs_hashset.rs  info_parser.rs
biomics_core/src/: accum.rs  fold.rs  format.rs  hll.rs  lib.rs  parse.rs  statistics.rs  stats.rs  types.rs
cli/: Cargo.toml
cli/src/: args.rs  compare.rs  config.rs  context_detect.rs  main.rs  runner.rs
cli/src/output/: circos.rs  html.rs  json.rs  mod.rs  svg.rs
cli/src/tui/: app.rs  events.rs  mod.rs  widgets.rs
conda-recipe/: build.sh  meta.yaml
conda-recipe/test_data/: minimal.bed
docs/: index.html  multiomics_wasm.d.ts  multiomics_wasm.js  multiomics_wasm_bg.wasm
epigenomics_core/: Cargo.toml
epigenomics_core/src/: accum.rs  bed.rs  clock.rs  cpg.rs  lib.rs  longread.rs  types.rs
galaxy/: bioomics.xml  multiomics.xml
genomics_core/: Cargo.toml
genomics_core/src/: accum.rs  aligner.rs  assembly.rs  cancer.rs  cnv.rs  cnv_coverage.rs  cosmic.rs  cosmic_ref.rs  fastq.rs  genotyper.rs  lib.rs  pairhmm.rs  pileup.rs  prs.rs  somatic.rs  splice_aligner.rs  types.rs  vcf.rs
genomics_core/tests/: cosmic_validation.rs
integration_layer/: Cargo.toml
integration_layer/benches/: enrichment.rs
integration_layer/src/: correlation.rs  gene_state.rs  gmt.rs  gsea.rs  immune.rs  insights.rs  lib.rs  mofa.rs  paradox.rs  pathway.rs  pca.rs
integration_layer/src/gsea/: es_walk.rs  mod.rs  multilevel.rs  null_cache.rs  types.rs
integration_layer/tests/: gsea_validation.rs
multiomics_py/: Cargo.toml  pyproject.toml
multiomics_py/python/multiomics_py/: __init__.py
multiomics_py/src/: lib.rs
multiqc_bioomics/: setup.py
multiqc_bioomics/multiqc_bioomics/: __init__.py  multiqc_config.yaml
multiqc_multiomics/: setup.py
multiqc_multiomics/multiqc_multiomics/: __init__.py  multiqc_config.yaml
proteomics_core/: Cargo.toml
proteomics_core/src/: dia.rs  fasta.rs  fdr.rs  index.rs  lib.rs  metabolomics.rs  mzml.rs  phospho.rs  quant.rs  score.rs  search.rs  types.rs
pybioomics/: Cargo.toml  pyproject.toml
pybioomics/python/pybioomics/: __init__.py
pybioomics/src/: lib.rs
scrna_core/: Cargo.toml
scrna_core/benches/: umap_bench.rs
scrna_core/src/: cellcomm.rs  clustering.rs  de.rs  doublets.rs  graph.rs  harmony.rs  hvg.rs  lib.rs  multimodal.rs  normalize.rs  pseudotime.rs  qc.rs  spatial.rs  types.rs  umap.rs  umap_gpu.rs  velocity.rs
scrna_core/src/io/: mex.rs  mod.rs
test_data/: minimal.tsv  minimal.vcf
test_data/cosmic_validation/: synthetic_ref.fa  synthetic_sbs4.vcf
tests/golden/: deseq2_reference.toml
transcriptomics_core/: Cargo.toml
transcriptomics_core/src/: accum.rs  deseq2.rs  diffexpr.rs  lib.rs  quantify.rs  tsv.rs  types.rs
transcriptomics_core/tests/: deseq2_validation.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
workflows/: Snakefile  bioomics.nf  config.yaml  multiomics.nf  nextflow.config
