[package]
name              = "biomics_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description       = "Shared BatchAccum trait, lock-free fold, and statistics helpers"

[features]
default  = []
prefetch = []   # enables manual prefetch hints in parallel_fold (see fold.rs)
native   = []   # doc-only hint: build with RUSTFLAGS="-C target-cpu=native"

[dependencies]
anyhow            = { workspace = true }
rayon             = { workspace = true }
crossbeam-channel = { workspace = true }
serde             = { workspace = true }
log               = { workspace = true }
memchr            = { workspace = true }
fast-float        = { workspace = true }
itoa              = { workspace = true }
ryu               = { workspace = true }
