[package]
name              = "multiomics"
version.workspace = true
edition.workspace = true
license.workspace = true
description       = "Multiomics — production multi-omics analysis CLI"

[[bin]]
name = "multiomics"
path = "src/main.rs"

[features]
## Compile-time modality selection
## ─────────────────────────────────────────────────────────────────────────────
## atac     — ATAC-seq narrowPeak chromatin accessibility analysis
## cnv      — Copy-number variation extraction from VCF CN/SVTYPE fields
## longread — Long-read (PacBio / Nanopore) support in epigenomics
## full     — Enable all optional modalities (suitable for HPC nodes)
## default  — Practical default: atac + cnv enabled; longread opt-in
## ─────────────────────────────────────────────────────────────────────────────
atac     = ["dep:atacseq_core"]
cnv      = []
longread = ["epigenomics_core/longread"]
gpu      = ["scrna_core/gpu"]
full     = ["atac", "cnv", "longread", "gpu"]
default  = ["atac", "cnv"]

[dependencies]
biomics_core         = { path = "../biomics_core" }
genomics_core        = { path = "../genomics_core" }
transcriptomics_core = { path = "../transcriptomics_core" }
epigenomics_core     = { path = "../epigenomics_core" }
integration_layer    = { path = "../integration_layer" }
scrna_core           = { path = "../scrna_core" }
proteomics_core      = { path = "../proteomics_core" }
ndarray              = { workspace = true }
atacseq_core         = { path = "../atacseq_core", optional = true }
anyhow               = { workspace = true }
rayon                = { workspace = true }
crossbeam-channel    = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
clap                 = { workspace = true }
ratatui              = { workspace = true }
crossterm            = { workspace = true }
chrono               = { workspace = true }
log                  = { workspace = true }
env_logger           = { workspace = true }
mimalloc             = { workspace = true }
toml                 = { workspace = true }
num_cpus             = { workspace = true }
ahash                = { workspace = true }
memmap2              = { workspace = true }
memchr               = { workspace = true }
