[package]
name              = "epigenomics_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description       = "BED methylation file parsing and CpG island detection"

[dependencies]
biomics_core      = { path = "../biomics_core" }
anyhow            = { workspace = true }
rayon             = { workspace = true }
crossbeam-channel = { workspace = true }
serde             = { workspace = true }
memmap2           = { workspace = true }
log               = { workspace = true }
ahash             = { workspace = true }
memchr            = { workspace = true }
noodles-bam = { version = "0.68", optional = true }
noodles-sam = { version = "0.65", optional = true }

[features]
longread = ["noodles-bam", "noodles-sam"]
