[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "multiomics_py"
requires-python = ">=3.8"
description = "Python bindings for Multiomics — fast multi-omics analysis"
license = { text = "Apache-2.0" }
keywords = ["bioinformatics", "genomics", "multi-omics", "rust"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "multiomics_py._core"
