[package]
name              = "transcriptomics_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description       = "TSV expression matrix parsing and differential expression analysis"

[[test]]
name = "deseq2_validation"
path = "tests/deseq2_validation.rs"

[dependencies]
biomics_core      = { path = "../biomics_core" }
anyhow            = { workspace = true }
rayon             = { workspace = true }
crossbeam-channel = { workspace = true }
serde             = { workspace = true }
log               = { workspace = true }
ahash             = { workspace = true }
memmap2           = { workspace = true }
memchr            = { workspace = true }
noodles-bam       = "0.68"
noodles-sam       = "0.65"
