[package]
name = "multiomics-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen  = "0.2"
js-sys        = "0.3"
serde_json    = { workspace = true }
genomics_core        = { path = "../genomics_core" }
transcriptomics_core = { path = "../transcriptomics_core" }
epigenomics_core     = { path = "../epigenomics_core" }
integration_layer    = { path = "../integration_layer" }
biomics_core         = { path = "../biomics_core" }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
