[package]
name = "multiomics-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys       = "0.3"
serde        = { workspace = true }
serde_json   = { workspace = true }
memchr       = { workspace = true }
ahash        = { workspace = true }
biomics_core = { path = "../biomics_core" }

[dependencies.web-sys]
version  = "0.3"
features = ["console"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

# ahash pulls in getrandom 0.3; on wasm32 it needs the wasm_js feature.
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom3]
package  = "getrandom"
version  = "0.3"
features = ["wasm_js"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
